Start splitting modules into separate projects for organizational purposes